--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "husky": "^1.0.0-rc.8"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "node ./packages/@naughty/githook-vcm/lib/vcm"
+    }
+  }
 }
