--- a/packages/@naughty/githook-vcm/package.json
+++ b/packages/@naughty/githook-vcm/package.json
@@ -1,15 +1,19 @@
 {
   "name": "@naughty/githook-vcm",
-  "version": "0.1.3",
+  "version": "1.2.2",
+  "author": "Cphayim",
+  "license": "MIT",
   "bin": {
     "githook-vcm": "bin/githook-vcm"
   },
-  "main": "index.js",
+  "main": "lib/index.js",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc -w",
+    "build": "tsc",
+    "test": "exit 0;"
   },
   "repository": {
     "type": "git",
@@ -20,12 +24,14 @@
   },
   "homepage": "https://github.com/Cphayim/naughty#readme",
   "keywords": [],
-  "author": "Cphayim",
-  "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.1",
-    "husky": "^1.0.0-rc.7"
+    "yargs": "^13.2.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^12.0.2",
+    "@types/yargs": "^13.0.0",
+    "typescript": "^3.4.5"
+  },
   "description": ""
 }
