--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {}
+  "devDependencies": {
+    "@naughty/githook-vcm": "^1.2.2",
+    "yorkie": "^2.0.0"
+  },
+  "gitHooks": {
+    "commit-msg": "githook-vcm --ignore-scope"
+  }
 }
