--- a/packages/@naughty/runtime/cy-node/package.json
+++ b/packages/@naughty/runtime/cy-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naughty/cy-node",
-  "version": "0.0.1",
+  "version": "1.0.2",
   "author": "Cphayim",
   "license": "MIT",
   "bin": {
@@ -29,6 +29,10 @@
     "yargs": "^13.2.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
     "@types/node": "^12.0.2",
     "@types/yargs": "^13.0.0",
     "typescript": "^3.4.5"
