--- a/packages/@naughty/runtime/cy-node/package.json
+++ b/packages/@naughty/runtime/cy-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naughty/cy-node",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "Cphayim",
   "license": "MIT",
   "bin": {
@@ -28,7 +28,7 @@
     "chalk": "^2.4.1",
     "yargs": "^13.2.4"
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
