--- a/packages/@naughty/runtime/cy-node/package.json
+++ b/packages/@naughty/runtime/cy-node/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@naughty/cy-node",
-  "version": "1.0.3",
+  "version": "1.0.4",
+  "description": "🚀一个快速启动 ESNext 运行时",
   "author": "Cphayim",
   "license": "MIT",
   "bin": {
@@ -25,17 +26,16 @@
   "homepage": "https://github.com/Cphayim/naughty/tree/master/packages/runtime/cy-node#readme",
   "keywords": [],
   "dependencies": {
-    "chalk": "^2.4.1",
-    "yargs": "^13.2.4"
-  },
-  "dependencies": {
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
+    "chalk": "^2.4.1",
+    "yargs": "^13.2.4"
+  },
+  "devDependencies": {
     "@types/node": "^12.0.2",
     "@types/yargs": "^13.0.0",
     "typescript": "^3.4.5"
-  },
-  "description": ""
+  }
 }
