fix(cy-node): 修复在项目中局部安装，通过 npm 脚本运行时无法找到 babel 启动器的问题

--- a/packages/@naughty/runtime/cy-node/package.json
+++ b/packages/@naughty/runtime/cy-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naughty/cy-node",
-  "version": "1.0.8",
+  "version": "1.0.12",
   "description": "🚀一个快速启动 ESNext 运行时",
   "author": "Cphayim",
   "license": "MIT",
@@ -14,7 +14,8 @@
   "scripts": {
     "dev": "tsc -w",
     "build": "tsc",
-    "test": "exit 0;"
+    "test": "exit 0;",
+    "prepublishOnly": "echo 正在发布;"
   },
   "repository": {
     "type": "git",
