--- a/package.json
+++ b/package.json
@@ -1,37 +1,43 @@
 {
-  "name": "naughty",
-  "version": "1.0.0",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Cphayim/naughty.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Cphayim/naughty/issues"
-  },
-  "homepage": "https://github.com/Cphayim/naughty#readme",
+  "name": "ombro",
+  "license": "MIT",
+  "author": "Cphayim <i@cphayim.me>",
+  "repository": "git@github.com:Cphayim/ombro.git",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "precommit": "git add .",
-    "commit": "git-cz"
-  },
-  "gitHooks": {
-    "commit-msg": "commitlint -e --config commitlint.config.js"
+    "test": "echo 'ok';",
+    "commit": "git-cz",
+    "prepare": "husky install",
+    "prettier": "prettier --write .",
+    "lint": "eslint \"packages/**/*.ts\""
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-lerna-changelog"
     }
   },
-  "dependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@naughty/cy-node": "^1.0.10",
-    "commitizen": "^4.0.4",
-    "cz-conventional-changelog": "^3.1.0",
-    "yorkie": "^2.0.0"
+  "lint-staged": {
+    "*.{js,ts,json}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "commitizen": "^4.2.4",
+    "cz-lerna-changelog": "^2.0.3",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^6.0.0",
+    "lerna": "^4.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "2.3.0"
   }
 }
