--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -35,14 +35,14 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "@ombro/logger": "^1.0.0",
-    "minimist": "^1.2.5",
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
-    "@babel/preset-env": "^7.4.5"
+    "@babel/preset-env": "^7.4.5",
+    "@ombro/logger": "^1.0.0",
+    "minimist": "^1.2.5"
   }
 }
