--- a/lerna.json
+++ b/lerna.json
@@ -5,8 +5,8 @@
   "useWorkspaces": true,
   "command": {
     "version": {
-      "message": "chore(release): publish %s"
+      "message": "chore(release): publish"
     }
   },
-  "ignoreChanges": ["**/*.md"]
+  "ignoreChanges": ["*.md"]
 }
