--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -17,6 +17,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Cphayim/ombro.git"
