chore(logger): update npm description
affects: @ombro/logger

--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ombro/logger",
   "version": "1.1.0",
-  "description": "log tools",
+  "description": "Provides preset and custom Node.js log output tools",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro#readme",
   "license": "MIT",
