chore: add repository.directory, fix the npmjs readme relative links
affects: @ombro/logger, @ombro/node

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -22,7 +22,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Cphayim/ombro.git"
+    "url": "git+https://github.com/Cphayim/ombro.git",
+    "directory": "packages/node"
   },
   "scripts": {
     "dev": "tsc -w",
