--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "description": "Provides preset and custom Node.js log output tools",
   "author": "Cphayim <i@cphayim.me>",
-  "homepage": "https://github.com/Cphayim/ombro#readme",
+  "homepage": "https://github.com/Cphayim/ombro/",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -18,7 +18,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Cphayim/ombro.git"
+    "url": "git+https://github.com/Cphayim/ombro.git",
+    "directory": "packages/logger"
   },
   "scripts": {
     "build": "tsc",
