--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ombro/logger",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Provides preset and custom Node.js log output tools",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro/",
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "test": "node __test__/index.js",
     "clean": "rimraf lib coverage tsconfig.tsbuildinfo",
     "prepublish": "npm run clean && npm run build"
   },
