--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ombro/logger",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Provides preset and custom Node.js log output tools",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro/",
@@ -38,6 +38,7 @@
   "dependencies": {
     "@types/dedent": "^0.7.0",
     "@types/figlet": "^1.5.1",
+    "boxen": "^5.0.1",
     "chalk": "^4.1.1",
     "dedent": "^0.7.0",
     "figlet": "^1.5.0",
