--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -22,6 +22,7 @@
     "directory": "packages/logger"
   },
   "scripts": {
+    "dev": "tsc -w",
     "build": "tsc",
     "test": "node __test__/index.js",
     "clean": "rimraf lib coverage tsconfig.tsbuildinfo",
