fix(node): babelconfig

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ombro/node",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "🚀 A zero-configuration, quick-start `ESNext` Node.js runtime",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro#readme",
@@ -15,7 +15,8 @@
     "lib": "lib"
   },
   "files": [
-    "lib"
+    "lib",
+    "babel.config.js"
   ],
   "publishConfig": {
     "access": "public"
