--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ombro/ts-config",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "Shared TypeScript",
   "engines": {
     "node": ">=12"
@@ -20,6 +20,9 @@
     "type": "git",
     "url": "git+https://github.com/Cphayim/ombro.git",
     "directory": "packages/tsconfig"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "bugs": {
     "url": "https://github.com/Cphayim/ombro/issues"
