--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@ombro/logger",
-  "version": "1.5.0",
+  "version": "1.5.2",
   "description": "Provides preset and custom Node.js log output tools",
+  "keywords": [
+    "log",
+    "logger",
+    "cli"
+  ],
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro/",
   "license": "MIT",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "directories": {
-    "lib": "lib"
-  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "lib"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -25,7 +27,7 @@
     "dev": "tsc -w",
     "build": "tsc",
     "test": "node __test__/index.js",
-    "clean": "rimraf lib coverage tsconfig.tsbuildinfo",
+    "clean": "rimraf dist coverage *.tsbuildinfo",
     "prepublish": "npm run clean && npm run build"
   },
   "bugs": {
