--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
-    "outDir": "lib",
+    "outDir": "dist",
     "rootDir": "src"
   }
 }
