--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
 .DS_Store
+*.log
+*.tsbuildinfo
+*.code-workspace
 
+.vscode/
 node_modules/
-
-# builded directory
-lib/
 dist/
 tmp/
-
-yarn-error.log
-lerna-debug.log
-pkg-updater.json
-
-tsconfig.tsbuildinfo
-yarn
+coverage/
