--- a/package.json
+++ b/package.json
@@ -1,43 +1,58 @@
 {
+  "name": "ombro-monorepo",
   "private": true,
-  "name": "ombro",
-  "license": "MIT",
   "author": "Cphayim <i@cphayim.me>",
   "repository": "git@github.com:Cphayim/ombro.git",
-  "workspaces": [
-    "packages/*"
-  ],
+  "license": "MIT",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
+    "pnpm": "^6.28.0"
+  },
+  "packageManager": "pnpm@6.28.0",
   "scripts": {
-    "test": "echo 'ok';",
-    "commit": "git-cz",
+    "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
-    "prettier": "prettier --write .",
-    "lint": "eslint \"packages/**/*.ts\""
+    "test": "exit 0;",
+    "lint": "eslint packages/*/src/**.ts",
+    "format": "prettier --write --parser typescript \"packages/**/*.ts\"",
+    "commit": "git add . && cz"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-lerna-changelog"
+      "path": "./node_modules/cz-conventional-changelog"
     }
   },
   "lint-staged": {
-    "*.{js,ts,json}": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
+    "*.{js,json}": [
+      "prettier --write"
+    ],
+    "*.ts": [
+      "eslint",
+      "prettier --write --parser typescript"
     ]
   },
   "devDependencies": {
+    "@changesets/cli": "^2.21.0",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@ombro/ts-config": "workspace:^1.3.0",
+    "@types/fs-extra": "^9.0.13",
+    "@types/jest": "~27.4.0",
+    "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "commitizen": "^4.2.4",
-    "cz-lerna-changelog": "^2.0.3",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "esno": "^0.14.1",
+    "execa": "^6.1.0",
     "husky": "^6.0.0",
-    "lerna": "^4.0.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "2.3.0"
+    "jest": "~27.4.7",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
   }
 }
