--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -1,7 +1,10 @@
 {
-  "extends": "../../tsconfig.settings.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "ES2017",
+    "module": "Commonjs",
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "esModuleInterop": true
   }
 }
