--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,21 +1,18 @@
 {
   "name": "@ombro/node",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "🚀 A zero-configuration, quick-start `ESNext` Node.js runtime",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro#readme",
   "license": "MIT",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
   "bin": {
     "ombro-node": "bin/ombro-node.js",
     "onode": "bin/ombro-node.js"
   },
-  "directories": {
-    "lib": "lib"
-  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "lib",
+    "dist",
     "babel.config.js"
   ],
   "publishConfig": {
@@ -29,25 +26,21 @@
   "scripts": {
     "dev": "tsc -w",
     "build": "tsc",
-    "clean": "rimraf lib coverage tsconfig.tsbuildinfo",
-    "prepublish": "npm run clean && npm run build"
+    "test": "jest",
+    "clean": "rimraf dist coverage *.tsbuildinfo",
+    "prepublish": "pnpm run clean && pnpm run build && pnpm run test"
   },
   "bugs": {
     "url": "https://github.com/Cphayim/ombro/issues"
   },
-  "devDependencies": {
-    "rimraf": "^3.0.2",
-    "typescript": "^4.3.4"
-  },
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
-    "@babel/preset-env": "^7.4.5",
-    "@ombro/logger": "^1.4.0",
+    "@babel/core": "^7.17.5",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-proposal-decorators": "^7.17.2",
+    "@babel/plugin-proposal-pipeline-operator": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@ombro/logger": "workspace:*",
+    "execa": "^5.1.1",
     "minimist": "^1.2.5"
   }
 }
