--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "ES2017",
     "module": "Commonjs",
     "outDir": "dist",
-    "rootDir": "src",
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["**/__tests__/**"]
 }
