--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@ombro/ts-config": "workspace:*",
+    "@swc/core": "^1.2.152",
+    "@swc/jest": "^0.2.20",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "~27.4.0",
     "@types/node": "^17.0.18",
@@ -56,7 +58,6 @@
     "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   }
 }
