--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "pnpm -r build",
     "test": "jest",
     "test:coverage": "jest --coverage",
+    "new": "esno scripts/new.ts",
     "lint": "eslint packages/*/src/**.ts",
     "format": "prettier --write --parser typescript \"packages/**/*.ts\"",
     "commit": "git add . && cz"
@@ -43,6 +44,7 @@
     "@swc/core": "^1.2.152",
     "@swc/jest": "^0.2.20",
     "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^8.2.0",
     "@types/jest": "~27.4.0",
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -54,6 +56,7 @@
     "esno": "^0.14.1",
     "execa": "^6.1.0",
     "husky": "^6.0.0",
+    "inquirer": "^8.2.1",
     "jest": "^27.5.1",
     "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
