--- a/packages/tsconfig/tsconfig.cjs.json
+++ b/packages/tsconfig/tsconfig.cjs.json
@@ -1,28 +1,10 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "module": "CommonJS",
     "target": "ES2019", // Node.js 12
     "esModuleInterop": true,
-    "lib": ["ES2019", "ES2020.String", "DOM", "DOM.Iterable"],
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": false,
-    "jsx": "react",
-    "declaration": true,
-    "pretty": true,
-    "newLine": "lf",
-    "stripInternal": true,
-    "strict": true,
-    "noImplicitReturns": true,
-    "noImplicitOverride": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noEmitOnError": true,
-    "useDefineForClassFields": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "useUnknownInCatchVariables": false,
-    "removeComments": true
+    "lib": ["ES2019", "DOM"],
+    "jsx": "react"
   }
 }
