chore(lint-packages): add peer-deps to dev-deps

--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ombro/stylelint-config",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Shared stylelint config for CSS/SCSS",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro#readme",
@@ -21,9 +21,9 @@
     "url": "https://github.com/Cphayim/ombro/issues"
   },
   "peerDependencies": {
-    "stylelint": ">=14.0.0",
-    "prettier": ">=2.0.0",
-    "postcss": ">=8.0.0"
+    "postcss": ">=8.0.0",
+    "prettier": "^2.0.0",
+    "stylelint": ">=14.0.0"
   },
   "dependencies": {
     "stylelint-config-prettier": "^9.0.3",
@@ -31,5 +31,10 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-prettier": "^2.0.0"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.16",
+    "prettier": "^2.5.1",
+    "stylelint": "^14.11.0"
   }
 }
