--- a/packages/eslint-config-react-typescript/package.json
+++ b/packages/eslint-config-react-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ombro/eslint-config-react-typescript",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Shared eslint config for React + TypeScript",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro#readme",
@@ -31,5 +31,10 @@
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   }
 }
