--- a/packages/eslint-config-vue2/package.json
+++ b/packages/eslint-config-vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ombro/eslint-config-vue2",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Shared eslint config for Vue2",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro#readme",
@@ -27,5 +27,9 @@
   "dependencies": {
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-vue": "^8.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "prettier": "^2.5.1"
   }
 }
