--- a/packages/eslint-config-vue3-typescript/package.json
+++ b/packages/eslint-config-vue3-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ombro/eslint-config-vue3-typescript",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Shared eslint config for Vue3 + TypeScript",
   "author": "Cphayim <i@cphayim.me>",
   "homepage": "https://github.com/Cphayim/ombro#readme",
@@ -30,5 +30,10 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-vue": "^8.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   }
 }
