--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "clean:deps": "pnpm -wr exec -- rimraf node_modules",
     "clean:build": "pnpm -r exec -- rimraf dist coverage *.tsbuildinfo",
     "build": "pnpm -r build",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "new": "esno scripts/new.ts",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "new": "tsx scripts/new.ts",
     "lint": "eslint packages/*/src/**.ts",
     "format": "prettier --write --parser typescript \"packages/**/*.ts\"",
     "commit": "git add . && cz"
@@ -41,26 +41,24 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@ombro/ts-config": "workspace:*",
-    "@swc/core": "^1.2.152",
-    "@swc/jest": "^0.2.20",
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^8.2.0",
-    "@types/jest": "~27.4.0",
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "@vitest/coverage-c8": "^0.22.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
-    "esno": "^0.14.1",
     "execa": "^6.1.0",
     "husky": "^6.0.0",
     "inquirer": "^8.2.1",
-    "jest": "^27.5.1",
     "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.5.5"
+    "tsx": "^3.8.2",
+    "typescript": "^4.5.5",
+    "vitest": "^0.22.1"
   }
 }
