--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,21 +4,15 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'packages/**'
   pull_request:
-    branches:
-      - main
-    paths:
-      - 'packages/**'
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
-
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [16]
+        os: [ubuntu-latest]
+        node-version: [14, 16, 18]
 
     steps:
       - uses: actions/checkout@v2
