chore(deps): update renovate configuration

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,4 +8,10 @@
   ignorePaths: ['**/__tests__/**'],
   ignoreDeps: ['typescript'],
   timezone: 'Asia/Shanghai',
+  packageRules: [
+    {
+      depTypeList: ['peerDependencies'],
+      enabled: false,
+    },
+  ],
 }
