--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ombro/ts-config",
+  "name": "@ombro/tsconfig",
   "version": "1.4.2",
   "description": "Shared TypeScript tsconfig.json",
   "engines": {
