chore(tsconfig): rename package `@ombro/ts-config` to `@ombro/tsconfig` (#40)
* chore(tsconfig): update required node.js version to 14

* chore(tsconfig): rename package `@ombro/ts-config` to `@ombro/tsconfig`

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@ombro/ts-config",
+  "name": "@ombro/tsconfig",
   "version": "1.4.2",
   "description": "Shared TypeScript tsconfig.json",
   "engines": {
-    "node": ">=v12.22.12"
+    "node": "^14.13.1 || >=16.0.0"
   },
   "keywords": [
     "tsconfig",
