--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,5 @@
 {
-  "env": {
-    "node": true,
-    "es2021": true
-  },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint"],
+  "extends": ["@ombro/eslint-config-typescript"],
   "rules": {
     "@typescript-eslint/no-var-requires": "off"
   }
