--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@ombro/eslint-config-typescript": "workspace:*",
     "@ombro/tsconfig": "workspace:*",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.10",
