--- a/.tpl/package.json
+++ b/.tpl/package.json
@@ -10,7 +10,8 @@
     "dist"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
