--- a/packages/eslint-config-vue2/package.json
+++ b/packages/eslint-config-vue2/package.json
@@ -10,7 +10,8 @@
     "index.js"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
