--- a/packages/is-main/package.json
+++ b/packages/is-main/package.json
@@ -11,7 +11,8 @@
   "type": "module",
   "main": "dist/index.js",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
