--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -16,7 +16,8 @@
     "babel.config.js"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
