--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -22,7 +22,8 @@
     "directory": "packages/tsconfig"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "bugs": {
     "url": "https://github.com/Cphayim/ombro/issues"
