--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "rimraf": "^4.1.2",
     "tsx": "^3.12.3",
     "typescript": "^4.8.2",
+    "vite": "^4.1.4",
+    "vite-plugin-dts": "^2.0.2",
     "vitest": "^0.29.2"
   }
 }
