--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "git@github.com:Cphayim/ombro.git",
   "license": "MIT",
   "engines": {
-    "node": "^14.13.1 || >=16.0.0"
+    "node": ">=16.0.0"
   },
   "packageManager": "pnpm@7.30.0",
   "scripts": {
@@ -13,7 +13,7 @@
     "prepare": "husky install",
     "clean:deps": "pnpm -wr exec -- rimraf node_modules",
     "clean:build": "pnpm -r exec -- rimraf dist coverage *.tsbuildinfo",
-    "build": "pnpm -r build",
+    "build": "pnpm clean:build && pnpm -r build",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "new": "tsx scripts/new.ts",
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@ombro/eslint-config-typescript": "workspace:*",
     "@ombro/tsconfig": "workspace:*",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
@@ -59,9 +59,10 @@
     "prettier": "^2.8.5",
     "rimraf": "^4.4.0",
     "tsx": "^3.12.6",
-    "typescript": "^4.8.2",
+    "typescript": "^5.1.3",
     "vite": "^4.2.1",
     "vite-plugin-dts": "^2.1.0",
-    "vitest": "^0.29.7"
+    "vitest": "^0.29.7",
+    "vue-tsc": "^1.6.5"
   }
 }
