--- a/packages/dnd-vue/tsconfig.json
+++ b/packages/dnd-vue/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "noEmitOnError": false
   },
   "include": ["src/**/*"],
   "exclude": ["**/__tests__/**"]
