ci(renovate): update renovate.json

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -6,7 +6,7 @@
   rangeStrategy: 'bump', // 当前版本号的范围策略, bump: "v1.0.0 -> v1.1.0"
   // commitBodyTable: true, // 在 PR 正文中附加一个描述更新内容的表格
   ignorePaths: ['**/__tests__/**'],
-  ignoreDeps: ['typescript'],
+  // ignoreDeps: ['typescript'],
   timezone: 'Asia/Shanghai',
   packageRules: [
     {
